tela de login e navegação entre as telas de login e cadastro

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -6,122 +6,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".registerScreen">
-
+    tools:context=".loginScreen">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Faça seu Cadastro"
-        android:textAlignment="center"
+        android:text="Login"
         android:textSize="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="60dp"
         android:textColor="@color/black"/>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etName"
+        android:id="@+id/etEmailLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="30dp"
-        android:height="50dp"
-        android:width="200dp"
-        android:hint="Nome"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etCpf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="30dp"
-        android:height="50dp"
-        android:width="200dp"
-        android:hint="CPF"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etNascimento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="30dp"
-        android:height="50dp"
-        android:width="200dp"
-        android:hint="data nascimento"/>
+        android:hint="E-mail                "/>
 
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etSenhaLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="30dp"
-        android:height="50dp"
-        android:width="200dp"
-        android:hint="E-mail"/>
+        android:hint="Senha                "/>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etPassword"
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvCadastrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Não tem cadastro? Cadastrar"
         android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="30dp"
-        android:height="50dp"
-        android:width="200dp"
-        android:hint="Senha"/>
+        android:textColor="@color/blue"
+        android:layout_marginTop="10dp"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnEnviar"
+        android:id="@+id/btnEnviarLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enviar"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnVoltar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Voltar"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
-
+        android:layout_marginTop="20dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCadastroEnviado"
+        android:id="@+id/tvLoginEnviado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="cadastro realizado"
+        android:text="login realizado"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp"
         android:textColor="@color/green"
         android:visibility="gone"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCadastroNegado"
+        android:id="@+id/tvLoginNegado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="cadastro negado"
+        android:text="login negado"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp"
         android:textColor="@color/red"
         android:visibility="gone"/>
-
-
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
