--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:inputType="textPassword"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="30dp"
