Criação da home e arrumei funções

--- a/app/src/main/res/layout/activity_register_credit_card.xml
+++ b/app/src/main/res/layout/activity_register_credit_card.xml
@@ -78,4 +78,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="0dp"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voltar"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"/>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
