função de logout feita

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -24,4 +24,12 @@
         android:layout_marginTop="10dp"
         android:text="Cadastrar Cartão" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSair"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Logout" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
