--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="blue_icons">#163760</color>
     <color name="light_black">#6F161D25</color>
     <color name="white">#F6F6F6</color>
+    <color name="grey_button">#D9D9D9</color>
+    <color name="grey_texto_card">#9B9B9B</color>
 </resources>
