--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,24 @@
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:textColor">"@color/white"</item>
-
-
     </style>
+
+    <style name="barranumbercard">
+        <item name="android:layout_width">299dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/quadradonc</item>
+        <item name="android:layout_marginLeft">80dp</item>
+        <item name="android:layout_marginRight">80dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="chip_card">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/ic_sim_card_chip_1</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_marginLeft">1dp</item>
+        <item name="android:layout_marginRight">1dp</item>
+    </style>
+
 </resources>
