--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -3,229 +3,139 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayoutCompat2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
     android:orientation="vertical"
     tools:context="br.com.the_guardian.registerScreen">
 
 
-    <View
-        android:id="@+id/rectangle"
-        style="@style/logo"
-        app:layout_constraintBottom_toBottomOf="@id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="170dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:adjustViewBounds="true"
-        android:maxHeight="100dp"
-        android:src="@drawable/llogopng"
-        app:layout_constraintBottom_toTopOf="@+id/rectangle"
-        android:layout_marginTop="-130.5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.352" />
-
-
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginStart="30dp"
-        android:fontFamily="@font/kronaone_regular"
-        android:text="@string/bem_vindo"
-        android:textAlignment="textStart"
-        android:textColor="@color/dark_blue"
-        android:textSize="40sp" />
+        android:text="Faça seu Cadastro"
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:textColor="@color/black"/>
 
-    <TextView
-        android:id="@+id/AppCompatTextView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="-40dp"
-        android:font="@font/jurabold"
-        android:text="@string/para_come_ar_entre_com_suas_credenciais"
-        android:textAlignment="textStart"
-        android:textColor="@color/dark_blue"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-
-
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="textStart"
-        style="@style/email_barra"
+        android:layout_gravity="center"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:textColorHint="@color/white"
-        android:hint="@string/nome_cadastro" />
+        android:width="200dp"
+        android:hint="Nome"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etCpf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/email_barra"
+        android:layout_gravity="center"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/white"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:hint="@string/cpf_cadastro" />
+        android:width="200dp"
+        android:hint="CPF"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/email_barra"
+        android:layout_gravity="center"
+        android:inputType="text"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/white"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:hint="@string/data_nascimento"
-        android:inputType="text" />
+        android:width="200dp"
+        android:hint="Data nascimento"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/email_barra"
+        android:layout_gravity="center"
+        android:inputType="text"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/white"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:hint="@string/telefone_cadastro"
-        android:inputType="text" />
+        android:width="200dp"
+        android:hint="Telefone"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/email_barra"
+        android:layout_gravity="center"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/white"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:hint="@string/e_mail_cadastro" />
+        android:width="200dp"
+        android:hint="E-mail"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/email_barra"
+        android:layout_gravity="center"
+        android:inputType="textPassword"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/white"
-        android:width="350dp"
+        android:layout_marginEnd="30dp"
         android:height="50dp"
-        android:hint="@string/senha_cadastro"
-        android:inputType="textPassword" />
+        android:width="200dp"
+        android:hint="Senha"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnEnviar"
-        style="@style/login_button"
-        android:fontFamily="@font/kronaone_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:width="250dp"
+        android:text="Enviar"
         android:layout_gravity="center"
-        android:layout_marginTop="0dp"
-        android:text="@string/cadastrar_se" />
+        android:layout_marginTop="0dp"/>
 
-
-
-    <TextView
-        android:id="@+id/AppCompatTextView4"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"
-        android:font="@font/jurabold"
-        android:text="@string/j_possu_uma_conta"
-        android:textAlignment="textStart"
-        android:textColor="@color/dark_blue"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlCompat" />
-
-
-
-    <TextView
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnVoltar"
-        android:font="@font/jurabold"
-        android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/purple"
-        android:layout_marginEnd="70dp"
-        android:layout_marginTop="-25dp"
-        android:text="@string/login_voltar" />
+        android:text="Voltar"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"/>
 
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCadastroEnviado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="cadastro realizado"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
-        android:text="@string/cadastro_realizado"
-        android:textAlignment="center"
         android:textColor="@color/green"
-        android:textSize="20sp"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCadastroNegado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="cadastro negado"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
-        android:text="@string/cadastro_negado"
-        android:textAlignment="center"
         android:textColor="@color/red"
-        android:textSize="20sp"
-        android:visibility="gone" />
+        android:visibility="gone"/>
+
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
