--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -8,132 +8,213 @@
     android:orientation="vertical"
     tools:context="br.com.the_guardian.registerScreen">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/rectangle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/logo"
+        android:paddingTop="100dp"
+        />
+
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-90dp"
+        android:src="@drawable/llogopng"
+        android:adjustViewBounds="true"
+        android:maxHeight="87dp"
+        />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Faça seu Cadastro"
-        android:textAlignment="center"
-        android:textSize="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
-        android:textColor="@color/black"/>
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginStart="30dp"
+        android:fontFamily="@font/kronaone_regular"
+        android:text="@string/bem_vindo"
+        android:textAlignment="textStart"
+        android:textColor="@color/dark_blue"
+        android:textSize="40sp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="0dp"
+        android:font="@font/jurabold"
+        android:text="@string/para_come_ar_entre_com_suas_credenciais"
+        android:textAlignment="textStart"
+        android:textColor="@color/dark_blue"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.396"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:textAlignment="textStart"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="Nome"/>
+        android:textColorHint="@color/white"
+        android:hint="@string/nome_cadastro" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etCpf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:textColorHint="@color/white"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="CPF"/>
+        android:hint="@string/cpf_cadastro" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etNascimento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="text"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:textColorHint="@color/white"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="Data nascimento"/>
+        android:hint="@string/data_nascimento"
+        android:inputType="text" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="text"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:textColorHint="@color/white"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="Telefone"/>
+        android:hint="@string/telefone_cadastro"/>
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:textColorHint="@color/white"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="E-mail"/>
+        android:hint="@string/e_mail_cadastro" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="textPassword"
+        style="@style/email_barra"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/juraregular"
+        android:textColorHint="@color/white"
+        android:width="350dp"
         android:height="50dp"
-        android:width="200dp"
-        android:hint="Senha"/>
+        android:hint="@string/senha_cadastro"
+        android:inputType="textPassword" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnEnviar"
+        style="@style/login_button"
+        android:fontFamily="@font/kronaone_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enviar"
+        android:textSize="22sp"
+        android:width="250dp"
         android:layout_gravity="center"
-        android:layout_marginTop="0dp"/>
+        android:layout_marginTop="0dp"
+        android:text="@string/cadastrar_se" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/AppCompatTextView4"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:font="@font/jurabold"
+        android:text="@string/j_possu_uma_conta"
+        android:textAlignment="textStart"
+        android:textColor="@color/dark_blue"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.396"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlCompat" />
+
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Voltar"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="-55dp"
+        android:textSize="15sp"
+        android:text="@string/voltar_login"
+        android:fontFamily="@font/jurabold"
+        android:textColor="@color/purple"
+        android:backgroundTint="@color/grey"
+        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnEnviar" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCadastroEnviado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="cadastro realizado"
-        android:textAlignment="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:text="@string/cadastro_realizado"
+        android:textAlignment="center"
         android:textColor="@color/green"
-        android:visibility="gone"/>
+        android:textSize="20sp"
+        android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCadastroNegado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="cadastro negado"
-        android:textAlignment="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:text="@string/cadastro_negado"
+        android:textAlignment="center"
         android:textColor="@color/red"
-        android:visibility="gone"/>
+        android:textSize="20sp"
+        android:visibility="gone" />
 
 
 
